CD/3YACC/y.output
   0  $accept : Main $end

   1  Main : Type MAIN '(' ')' '{' Program '}'

   2  Program : Program SList
   3          |

   4  SList : SList Declare ';'
   5        | SList AssignMent ';'
   6        | SList If
   7        | SList IfElse
   8        | SList While
   9        | SList For '{' SList
  10        | SList For
  11        | SList Declare
  12        | SList AssignMent
  13        |

  14  Declare : Type Idlist
  15          | Type AssignMent

  16  Type : INT
  17       | FLOAT
  18       | CHAR

  19  Idlist : Idlist ',' ID
  20         | Idlist ',' AssignMent
  21         | ID
  22         | AssignMent

  23  AssignMent : ID '=' Expression

  24  NumOperator : '+'
  25              | '-'
  26              | '*'
  27              | '/'

  28  Expression : ID NumOperator ID
  29             | ID
  30             | CONST

  31  Condition : Expression RelOperator Expression
  32            | Expression
  33            |

  34  RelOperator : '>'
  35              | '<'

  36  StatementBlock : '{' SList
  37                 | '{' SList '}'

  38  If : IF '(' Condition
  39     | IF '(' Condition ')' StatementBlock
  40     | error

  41  IfElse : If ELSE StatementBlock
  42         | error

  43  While : WHILE '(' Condition ')' StatementBlock
  44        | error

  45  ForData : Declare
  46          | AssignMent
  47          | Expression
  48          | Condition
  49          |

  50  For : FOR '(' ForData ';' Condition ';' ForData ')' StatementBlock
  51      | error

state 0
	$accept : . Main $end  (0)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	.  error

	Main  goto 4
	Type  goto 5


state 1
	Type : INT .  (16)

	.  reduce 16


state 2
	Type : FLOAT .  (17)

	.  reduce 17


state 3
	Type : CHAR .  (18)

	.  reduce 18


state 4
	$accept : Main . $end  (0)

	$end  accept


state 5
	Main : Type . MAIN '(' ')' '{' Program '}'  (1)

	MAIN  shift 6
	.  error


state 6
	Main : Type MAIN . '(' ')' '{' Program '}'  (1)

	'('  shift 7
	.  error


state 7
	Main : Type MAIN '(' . ')' '{' Program '}'  (1)

	')'  shift 8
	.  error


state 8
	Main : Type MAIN '(' ')' . '{' Program '}'  (1)

	'{'  shift 9
	.  error


state 9
	Main : Type MAIN '(' ')' '{' . Program '}'  (1)
	Program : .  (3)

	.  reduce 3

	Program  goto 10


10: shift/reduce conflict (shift 11, reduce 13) on '}'
state 10
	Main : Type MAIN '(' ')' '{' Program . '}'  (1)
	Program : Program . SList  (2)
	SList : .  (13)

	'}'  shift 11
	error  reduce 13
	ID  reduce 13
	INT  reduce 13
	FLOAT  reduce 13
	CHAR  reduce 13
	IF  reduce 13
	WHILE  reduce 13
	FOR  reduce 13

	SList  goto 12


state 11
	Main : Type MAIN '(' ')' '{' Program '}' .  (1)

	.  reduce 1


12: shift/reduce conflict (shift 13, reduce 2) on error
12: shift/reduce conflict (shift 14, reduce 2) on ID
12: shift/reduce conflict (shift 1, reduce 2) on INT
12: shift/reduce conflict (shift 2, reduce 2) on FLOAT
12: shift/reduce conflict (shift 3, reduce 2) on CHAR
12: shift/reduce conflict (shift 15, reduce 2) on IF
12: shift/reduce conflict (shift 16, reduce 2) on WHILE
12: shift/reduce conflict (shift 17, reduce 2) on FOR
state 12
	Program : Program SList .  (2)
	SList : SList . Declare ';'  (4)
	SList : SList . AssignMent ';'  (5)
	SList : SList . If  (6)
	SList : SList . IfElse  (7)
	SList : SList . While  (8)
	SList : SList . For '{' SList  (9)
	SList : SList . For  (10)
	SList : SList . Declare  (11)
	SList : SList . AssignMent  (12)

	error  shift 13
	ID  shift 14
	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	'}'  reduce 2

	Type  goto 18
	Declare  goto 19
	AssignMent  goto 20
	If  goto 21
	IfElse  goto 22
	While  goto 23
	For  goto 24


13: reduce/reduce conflict (reduce 40, reduce 42) on error
13: reduce/reduce conflict (reduce 40, reduce 44) on error
13: reduce/reduce conflict (reduce 40, reduce 51) on error
13: reduce/reduce conflict (reduce 40, reduce 42) on ID
13: reduce/reduce conflict (reduce 40, reduce 44) on ID
13: reduce/reduce conflict (reduce 40, reduce 51) on ID
13: reduce/reduce conflict (reduce 40, reduce 42) on INT
13: reduce/reduce conflict (reduce 40, reduce 44) on INT
13: reduce/reduce conflict (reduce 40, reduce 51) on INT
13: reduce/reduce conflict (reduce 40, reduce 42) on FLOAT
13: reduce/reduce conflict (reduce 40, reduce 44) on FLOAT
13: reduce/reduce conflict (reduce 40, reduce 51) on FLOAT
13: reduce/reduce conflict (reduce 40, reduce 42) on CHAR
13: reduce/reduce conflict (reduce 40, reduce 44) on CHAR
13: reduce/reduce conflict (reduce 40, reduce 51) on CHAR
13: reduce/reduce conflict (reduce 40, reduce 42) on IF
13: reduce/reduce conflict (reduce 40, reduce 44) on IF
13: reduce/reduce conflict (reduce 40, reduce 51) on IF
13: reduce/reduce conflict (reduce 40, reduce 42) on ELSE
13: reduce/reduce conflict (reduce 40, reduce 44) on ELSE
13: reduce/reduce conflict (reduce 40, reduce 51) on ELSE
13: reduce/reduce conflict (reduce 40, reduce 42) on WHILE
13: reduce/reduce conflict (reduce 40, reduce 44) on WHILE
13: reduce/reduce conflict (reduce 40, reduce 51) on WHILE
13: reduce/reduce conflict (reduce 40, reduce 42) on FOR
13: reduce/reduce conflict (reduce 40, reduce 44) on FOR
13: reduce/reduce conflict (reduce 40, reduce 51) on FOR
13: reduce/reduce conflict (reduce 40, reduce 42) on '{'
13: reduce/reduce conflict (reduce 40, reduce 44) on '{'
13: reduce/reduce conflict (reduce 40, reduce 51) on '{'
13: reduce/reduce conflict (reduce 40, reduce 42) on '}'
13: reduce/reduce conflict (reduce 40, reduce 44) on '}'
13: reduce/reduce conflict (reduce 40, reduce 51) on '}'
state 13
	If : error .  (40)
	IfElse : error .  (42)
	While : error .  (44)
	For : error .  (51)

	.  reduce 40


state 14
	AssignMent : ID . '=' Expression  (23)

	'='  shift 25
	.  error


state 15
	If : IF . '(' Condition  (38)
	If : IF . '(' Condition ')' StatementBlock  (39)

	'('  shift 26
	.  error


state 16
	While : WHILE . '(' Condition ')' StatementBlock  (43)

	'('  shift 27
	.  error


state 17
	For : FOR . '(' ForData ';' Condition ';' ForData ')' StatementBlock  (50)

	'('  shift 28
	.  error


state 18
	Declare : Type . Idlist  (14)
	Declare : Type . AssignMent  (15)

	ID  shift 29
	.  error

	AssignMent  goto 30
	Idlist  goto 31


state 19
	SList : SList Declare . ';'  (4)
	SList : SList Declare .  (11)

	';'  shift 32
	error  reduce 11
	ID  reduce 11
	INT  reduce 11
	FLOAT  reduce 11
	CHAR  reduce 11
	IF  reduce 11
	ELSE  reduce 11
	WHILE  reduce 11
	FOR  reduce 11
	'{'  reduce 11
	'}'  reduce 11


state 20
	SList : SList AssignMent . ';'  (5)
	SList : SList AssignMent .  (12)

	';'  shift 33
	error  reduce 12
	ID  reduce 12
	INT  reduce 12
	FLOAT  reduce 12
	CHAR  reduce 12
	IF  reduce 12
	ELSE  reduce 12
	WHILE  reduce 12
	FOR  reduce 12
	'{'  reduce 12
	'}'  reduce 12


21: shift/reduce conflict (shift 34, reduce 6) on ELSE
state 21
	SList : SList If .  (6)
	IfElse : If . ELSE StatementBlock  (41)

	ELSE  shift 34
	error  reduce 6
	ID  reduce 6
	INT  reduce 6
	FLOAT  reduce 6
	CHAR  reduce 6
	IF  reduce 6
	WHILE  reduce 6
	FOR  reduce 6
	'{'  reduce 6
	'}'  reduce 6


state 22
	SList : SList IfElse .  (7)

	.  reduce 7


state 23
	SList : SList While .  (8)

	.  reduce 8


24: shift/reduce conflict (shift 35, reduce 10) on '{'
state 24
	SList : SList For . '{' SList  (9)
	SList : SList For .  (10)

	'{'  shift 35
	error  reduce 10
	ID  reduce 10
	INT  reduce 10
	FLOAT  reduce 10
	CHAR  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	WHILE  reduce 10
	FOR  reduce 10
	'}'  reduce 10


state 25
	AssignMent : ID '=' . Expression  (23)

	ID  shift 36
	CONST  shift 37
	.  error

	Expression  goto 38


26: shift/reduce conflict (shift 36, reduce 33) on ID
state 26
	If : IF '(' . Condition  (38)
	If : IF '(' . Condition ')' StatementBlock  (39)
	Condition : .  (33)

	ID  shift 36
	CONST  shift 37
	error  reduce 33
	INT  reduce 33
	FLOAT  reduce 33
	CHAR  reduce 33
	IF  reduce 33
	ELSE  reduce 33
	WHILE  reduce 33
	FOR  reduce 33
	')'  reduce 33
	'{'  reduce 33
	'}'  reduce 33

	Expression  goto 39
	Condition  goto 40


state 27
	While : WHILE '(' . Condition ')' StatementBlock  (43)
	Condition : .  (33)

	ID  shift 36
	CONST  shift 37
	')'  reduce 33

	Expression  goto 39
	Condition  goto 41


28: reduce/reduce conflict (reduce 33, reduce 49) on ';'
state 28
	For : FOR '(' . ForData ';' Condition ';' ForData ')' StatementBlock  (50)
	Condition : .  (33)
	ForData : .  (49)

	ID  shift 42
	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	CONST  shift 37
	';'  reduce 33

	Type  goto 18
	Declare  goto 43
	AssignMent  goto 44
	Expression  goto 45
	Condition  goto 46
	ForData  goto 47


state 29
	Idlist : ID .  (21)
	AssignMent : ID . '=' Expression  (23)

	'='  shift 25
	error  reduce 21
	ID  reduce 21
	INT  reduce 21
	FLOAT  reduce 21
	CHAR  reduce 21
	IF  reduce 21
	ELSE  reduce 21
	WHILE  reduce 21
	FOR  reduce 21
	')'  reduce 21
	'{'  reduce 21
	'}'  reduce 21
	';'  reduce 21
	','  reduce 21


30: reduce/reduce conflict (reduce 15, reduce 22) on error
30: reduce/reduce conflict (reduce 15, reduce 22) on ID
30: reduce/reduce conflict (reduce 15, reduce 22) on INT
30: reduce/reduce conflict (reduce 15, reduce 22) on FLOAT
30: reduce/reduce conflict (reduce 15, reduce 22) on CHAR
30: reduce/reduce conflict (reduce 15, reduce 22) on IF
30: reduce/reduce conflict (reduce 15, reduce 22) on ELSE
30: reduce/reduce conflict (reduce 15, reduce 22) on WHILE
30: reduce/reduce conflict (reduce 15, reduce 22) on FOR
30: reduce/reduce conflict (reduce 15, reduce 22) on ')'
30: reduce/reduce conflict (reduce 15, reduce 22) on '{'
30: reduce/reduce conflict (reduce 15, reduce 22) on '}'
30: reduce/reduce conflict (reduce 15, reduce 22) on ';'
state 30
	Declare : Type AssignMent .  (15)
	Idlist : AssignMent .  (22)

	error  reduce 15
	ID  reduce 15
	INT  reduce 15
	FLOAT  reduce 15
	CHAR  reduce 15
	IF  reduce 15
	ELSE  reduce 15
	WHILE  reduce 15
	FOR  reduce 15
	')'  reduce 15
	'{'  reduce 15
	'}'  reduce 15
	';'  reduce 15
	','  reduce 22


state 31
	Declare : Type Idlist .  (14)
	Idlist : Idlist . ',' ID  (19)
	Idlist : Idlist . ',' AssignMent  (20)

	','  shift 48
	error  reduce 14
	ID  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	CHAR  reduce 14
	IF  reduce 14
	ELSE  reduce 14
	WHILE  reduce 14
	FOR  reduce 14
	')'  reduce 14
	'{'  reduce 14
	'}'  reduce 14
	';'  reduce 14


state 32
	SList : SList Declare ';' .  (4)

	.  reduce 4


state 33
	SList : SList AssignMent ';' .  (5)

	.  reduce 5


state 34
	IfElse : If ELSE . StatementBlock  (41)

	'{'  shift 49
	.  error

	StatementBlock  goto 50


state 35
	SList : SList For '{' . SList  (9)
	SList : .  (13)

	.  reduce 13

	SList  goto 51


state 36
	Expression : ID . NumOperator ID  (28)
	Expression : ID .  (29)

	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	error  reduce 29
	ID  reduce 29
	INT  reduce 29
	FLOAT  reduce 29
	CHAR  reduce 29
	IF  reduce 29
	ELSE  reduce 29
	WHILE  reduce 29
	FOR  reduce 29
	')'  reduce 29
	'{'  reduce 29
	'}'  reduce 29
	';'  reduce 29
	','  reduce 29
	'>'  reduce 29
	'<'  reduce 29

	NumOperator  goto 56


state 37
	Expression : CONST .  (30)

	.  reduce 30


state 38
	AssignMent : ID '=' Expression .  (23)

	.  reduce 23


state 39
	Condition : Expression . RelOperator Expression  (31)
	Condition : Expression .  (32)

	'>'  shift 57
	'<'  shift 58
	error  reduce 32
	ID  reduce 32
	INT  reduce 32
	FLOAT  reduce 32
	CHAR  reduce 32
	IF  reduce 32
	ELSE  reduce 32
	WHILE  reduce 32
	FOR  reduce 32
	')'  reduce 32
	'{'  reduce 32
	'}'  reduce 32
	';'  reduce 32

	RelOperator  goto 59


state 40
	If : IF '(' Condition .  (38)
	If : IF '(' Condition . ')' StatementBlock  (39)

	')'  shift 60
	error  reduce 38
	ID  reduce 38
	INT  reduce 38
	FLOAT  reduce 38
	CHAR  reduce 38
	IF  reduce 38
	ELSE  reduce 38
	WHILE  reduce 38
	FOR  reduce 38
	'{'  reduce 38
	'}'  reduce 38


state 41
	While : WHILE '(' Condition . ')' StatementBlock  (43)

	')'  shift 61
	.  error


state 42
	AssignMent : ID . '=' Expression  (23)
	Expression : ID . NumOperator ID  (28)
	Expression : ID .  (29)

	'='  shift 25
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	')'  reduce 29
	';'  reduce 29
	'>'  reduce 29
	'<'  reduce 29

	NumOperator  goto 56


state 43
	ForData : Declare .  (45)

	.  reduce 45


state 44
	ForData : AssignMent .  (46)

	.  reduce 46


45: reduce/reduce conflict (reduce 32, reduce 47) on ')'
45: reduce/reduce conflict (reduce 32, reduce 47) on ';'
state 45
	Condition : Expression . RelOperator Expression  (31)
	Condition : Expression .  (32)
	ForData : Expression .  (47)

	'>'  shift 57
	'<'  shift 58
	')'  reduce 32
	';'  reduce 32

	RelOperator  goto 59


state 46
	ForData : Condition .  (48)

	.  reduce 48


state 47
	For : FOR '(' ForData . ';' Condition ';' ForData ')' StatementBlock  (50)

	';'  shift 62
	.  error


state 48
	Idlist : Idlist ',' . ID  (19)
	Idlist : Idlist ',' . AssignMent  (20)

	ID  shift 63
	.  error

	AssignMent  goto 64


state 49
	StatementBlock : '{' . SList  (36)
	StatementBlock : '{' . SList '}'  (37)
	SList : .  (13)

	.  reduce 13

	SList  goto 65


state 50
	IfElse : If ELSE StatementBlock .  (41)

	.  reduce 41


51: shift/reduce conflict (shift 13, reduce 9) on error
51: shift/reduce conflict (shift 14, reduce 9) on ID
51: shift/reduce conflict (shift 1, reduce 9) on INT
51: shift/reduce conflict (shift 2, reduce 9) on FLOAT
51: shift/reduce conflict (shift 3, reduce 9) on CHAR
51: shift/reduce conflict (shift 15, reduce 9) on IF
51: shift/reduce conflict (shift 16, reduce 9) on WHILE
51: shift/reduce conflict (shift 17, reduce 9) on FOR
state 51
	SList : SList . Declare ';'  (4)
	SList : SList . AssignMent ';'  (5)
	SList : SList . If  (6)
	SList : SList . IfElse  (7)
	SList : SList . While  (8)
	SList : SList . For '{' SList  (9)
	SList : SList For '{' SList .  (9)
	SList : SList . For  (10)
	SList : SList . Declare  (11)
	SList : SList . AssignMent  (12)

	error  shift 13
	ID  shift 14
	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	ELSE  reduce 9
	'{'  reduce 9
	'}'  reduce 9

	Type  goto 18
	Declare  goto 19
	AssignMent  goto 20
	If  goto 21
	IfElse  goto 22
	While  goto 23
	For  goto 24


state 52
	NumOperator : '+' .  (24)

	.  reduce 24


state 53
	NumOperator : '-' .  (25)

	.  reduce 25


state 54
	NumOperator : '*' .  (26)

	.  reduce 26


state 55
	NumOperator : '/' .  (27)

	.  reduce 27


state 56
	Expression : ID NumOperator . ID  (28)

	ID  shift 66
	.  error


state 57
	RelOperator : '>' .  (34)

	.  reduce 34


state 58
	RelOperator : '<' .  (35)

	.  reduce 35


state 59
	Condition : Expression RelOperator . Expression  (31)

	ID  shift 36
	CONST  shift 37
	.  error

	Expression  goto 67


state 60
	If : IF '(' Condition ')' . StatementBlock  (39)

	'{'  shift 49
	.  error

	StatementBlock  goto 68


state 61
	While : WHILE '(' Condition ')' . StatementBlock  (43)

	'{'  shift 49
	.  error

	StatementBlock  goto 69


state 62
	For : FOR '(' ForData ';' . Condition ';' ForData ')' StatementBlock  (50)
	Condition : .  (33)

	ID  shift 36
	CONST  shift 37
	';'  reduce 33

	Expression  goto 39
	Condition  goto 70


state 63
	Idlist : Idlist ',' ID .  (19)
	AssignMent : ID . '=' Expression  (23)

	'='  shift 25
	error  reduce 19
	ID  reduce 19
	INT  reduce 19
	FLOAT  reduce 19
	CHAR  reduce 19
	IF  reduce 19
	ELSE  reduce 19
	WHILE  reduce 19
	FOR  reduce 19
	')'  reduce 19
	'{'  reduce 19
	'}'  reduce 19
	';'  reduce 19
	','  reduce 19


state 64
	Idlist : Idlist ',' AssignMent .  (20)

	.  reduce 20


65: shift/reduce conflict (shift 13, reduce 36) on error
65: shift/reduce conflict (shift 14, reduce 36) on ID
65: shift/reduce conflict (shift 1, reduce 36) on INT
65: shift/reduce conflict (shift 2, reduce 36) on FLOAT
65: shift/reduce conflict (shift 3, reduce 36) on CHAR
65: shift/reduce conflict (shift 15, reduce 36) on IF
65: shift/reduce conflict (shift 16, reduce 36) on WHILE
65: shift/reduce conflict (shift 17, reduce 36) on FOR
65: shift/reduce conflict (shift 71, reduce 36) on '}'
state 65
	SList : SList . Declare ';'  (4)
	SList : SList . AssignMent ';'  (5)
	SList : SList . If  (6)
	SList : SList . IfElse  (7)
	SList : SList . While  (8)
	SList : SList . For '{' SList  (9)
	SList : SList . For  (10)
	SList : SList . Declare  (11)
	SList : SList . AssignMent  (12)
	StatementBlock : '{' SList .  (36)
	StatementBlock : '{' SList . '}'  (37)

	error  shift 13
	ID  shift 14
	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	'}'  shift 71
	ELSE  reduce 36
	'{'  reduce 36

	Type  goto 18
	Declare  goto 19
	AssignMent  goto 20
	If  goto 21
	IfElse  goto 22
	While  goto 23
	For  goto 24


state 66
	Expression : ID NumOperator ID .  (28)

	.  reduce 28


state 67
	Condition : Expression RelOperator Expression .  (31)

	.  reduce 31


state 68
	If : IF '(' Condition ')' StatementBlock .  (39)

	.  reduce 39


state 69
	While : WHILE '(' Condition ')' StatementBlock .  (43)

	.  reduce 43


state 70
	For : FOR '(' ForData ';' Condition . ';' ForData ')' StatementBlock  (50)

	';'  shift 72
	.  error


state 71
	StatementBlock : '{' SList '}' .  (37)

	.  reduce 37


72: reduce/reduce conflict (reduce 33, reduce 49) on ')'
state 72
	For : FOR '(' ForData ';' Condition ';' . ForData ')' StatementBlock  (50)
	Condition : .  (33)
	ForData : .  (49)

	ID  shift 42
	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	CONST  shift 37
	')'  reduce 33

	Type  goto 18
	Declare  goto 43
	AssignMent  goto 44
	Expression  goto 45
	Condition  goto 46
	ForData  goto 73


state 73
	For : FOR '(' ForData ';' Condition ';' ForData . ')' StatementBlock  (50)

	')'  shift 74
	.  error


state 74
	For : FOR '(' ForData ';' Condition ';' ForData ')' . StatementBlock  (50)

	'{'  shift 49
	.  error

	StatementBlock  goto 75


state 75
	For : FOR '(' ForData ';' Condition ';' ForData ')' StatementBlock .  (50)

	.  reduce 50


Rules never reduced:
	IfElse : error  (42)
	While : error  (44)
	ForData : Expression  (47)
	ForData :  (49)
	For : error  (51)


State 10 contains 1 shift/reduce conflict.
State 12 contains 8 shift/reduce conflicts.
State 13 contains 33 reduce/reduce conflicts.
State 21 contains 1 shift/reduce conflict.
State 24 contains 1 shift/reduce conflict.
State 26 contains 1 shift/reduce conflict.
State 28 contains 1 reduce/reduce conflict.
State 30 contains 13 reduce/reduce conflicts.
State 45 contains 2 reduce/reduce conflicts.
State 51 contains 8 shift/reduce conflicts.
State 65 contains 9 shift/reduce conflicts.
State 72 contains 1 reduce/reduce conflict.


26 terminals, 18 nonterminals
52 grammar rules, 76 states
